# file_transfer_hub

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
frontend/: app.css  app.js  index.html
src/: main.c
